@@ -31,6 +31,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #23008: Fixed resolving attributes with boolean value is False in pydoc.
+
 - Fix asyncio issue 235: LifoQueue and PriorityQueue's put didn't
   increment unfinished tasks (this bug was introduced in 3.4.3 when
   JoinableQueue was merged with Queue).
